added toggles on signin panel and product details

--- a/app/assets/stylesheets/category_link.scss
+++ b/app/assets/stylesheets/category_link.scss
@@ -25,6 +25,7 @@
       cursor: pointer;
       color: $black;
       background-color: $sea-green;
+      transition-duration: 0.2s;
     }
     margin: auto;
     text-decoration: none;
