--- a/app/assets/stylesheets/product_show.scss
+++ b/app/assets/stylesheets/product_show.scss
@@ -106,7 +106,7 @@
       cursor: pointer;
       color: $black;
       background-color: $sea-green;
-
+      transition-duration: 0.2s;
     }
     width: 80%;
     margin-left: auto;
@@ -309,6 +309,7 @@
             font-weight: bold;
             font-size: 14px;
             height: auto;
+            padding-top: 10px;
           }
 
           h2{
@@ -346,7 +347,7 @@
         }
         background-color: white;
         margin-top: 10px;
-        padding-top: 10px;
+        // padding-top: 10px;
       }
       width: calc(100% * 2 / 3);
     }
@@ -380,6 +381,7 @@
           a:hover {
             background: $sea-green;
             cursor: pointer;
+            transition-duration: 0.2s;
           }
           padding-left: 10px;
           padding-right: 10px;
@@ -401,6 +403,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
+    margin-bottom: 20px;
     box-sizing: border-box;
   }
 }
@@ -430,6 +433,14 @@
 
 
   .product-details-shipping {
+    h1 {
+      font-family: $playfair-serif;
+      padding: 10px;
+      font-weight: bold;
+      font-size: 14px;
+      height: auto;
+    }
+    
     section {
       div {
         i {
@@ -466,6 +477,7 @@
         }
         a:hover {
           background-color: $sea-green;
+          transition-duration: 0.2s;
         }
         display: flex;
         flex-direction: column;
@@ -481,13 +493,45 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    margin-bottom: 20px;
-    width: calc(100% * 2 / 3);
+    margin-bottom: 10px;
+    width: 100%;
   }
-  width: 900px;
-  padding: 10px;
-  margin: 0 auto;
+  width: 100%;
+  // padding: 10px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
   box-sizing: border-box;
+}
+
+.the-story,
+.the-maker,
+.product-details-shipping {
+  h1 {
+    button {
+      
+      width: 24x;
+      height: 24px;
+      font-size: 24px;
+      font-family: $open-sans;
+      color: $dark-green;
+      border: none;
+      transform: scaleX(1.7);
+      cursor: pointer;
+    }
+    
+    font-family: $playfair-serif;
+    font-size: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 2px solid $beige;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+  }
 }
 
 
@@ -558,7 +602,7 @@
     .product-details-story-maker-details {
       .product-details-story-maker {
         width: 100%;
-        margin-bottom: 10px;
+        // margin-bottom: 10px;
       }
       .product-details-details {
           .the-details {
@@ -572,6 +616,7 @@
         }
       display: flex;
       flex-direction: column;
+      margin-bottom: 20px;
     }
     display: flex;
     flex-direction: column;
