--- a/app/assets/stylesheets/product_show.scss
+++ b/app/assets/stylesheets/product_show.scss
@@ -277,6 +277,7 @@
             padding: 10px;
             font-weight: bold;
             font-size: 14px;
+            border: none;
           }
 
           h3 {
@@ -310,6 +311,7 @@
             font-size: 14px;
             height: auto;
             padding-top: 10px;
+            border: none;
           }
 
           h2{
@@ -439,6 +441,7 @@
       font-weight: bold;
       font-size: 14px;
       height: auto;
+      border: none;
     }
     
     section {
