--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -140,12 +140,11 @@
     display: flex;
     flex-direction: row;
   }
-
-
-
-
   width: 45%;
-  padding: 15px 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 10px;
+  box-sizing: border-box;
   font-family: $playfair-serif;
 }
 
@@ -153,11 +152,11 @@
   border-top: 1px solid $beige;
   display: flex;
   justify-content: center;
-  margin-top: 5px;
-  padding-top: 20px;
   height: 130px;
+  padding-top: 20px;
   padding-bottom: 20px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
 }
 
@@ -186,9 +185,17 @@
     }
 
     display: flex;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 10px;
   }
+
+  .footer-description-details {
+    padding: 10px;
+  }
+
+  p {
+    padding: 10px;
+  }
+
   font-family: $open-sans;
   font-size: 10px;
   width: calc(1500px * 0.6);
@@ -322,6 +329,7 @@
       margin: 0 auto;
     }
     width: 100%;
+    padding-left: 10px;
   }
 
   .footer-description-link {
