--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,5 +1,26 @@
 @import "variables";
 
+// css for demonstrations signing in
+.session-demo-btn {
+  width: 100%;
+  height: 40px;
+  color: white;
+  font-size: 14px;
+  background-color: $darkest-green;
+  font-family: $playfair-serif;
+  border-radius: 4px;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.session-demo-btn:hover {
+  cursor: pointer;
+  color: $black;
+  background-color: $sea-green;
+  transition-duration: 0.2s;
+}
+// <- see comment above
+
 .noscroll { 
   position:fixed;
   overflow: hidden;
