--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -21,6 +21,8 @@
   background-position: 10px center;
   padding: 10px;
   margin-bottom: 20px;
+  margin-left: 0;
+  margin-right: 0;
 }
 .links-nav {
   hr {
