--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -26,8 +26,15 @@
   overflow: hidden;
 }
 
-.is-open, .hidden {
+.hidden {
   display: none;
+}
+
+.is-open {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 600ms, visibility 600ms;
+  transition: opacity 600ms, visibility 600ms;
 }
 
 .modal {
@@ -55,12 +62,15 @@
 .modal-form {
   position: fixed;
   overflow-y: scroll;
+  top: 0;
   right: 0;
   z-index: 3;
   background: $white;
   height: 100%;
   width: 300px;
   padding: 10px 25px;
+  -webkit-transition: opacity 600ms, visibility 600ms;
+  transition: opacity 600ms, visibility 600ms;
 }
 
 .modal-close-btn {
