--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -430,6 +430,13 @@
   }
 
   .footer-description-link {
+    .sponsors-links {
+      width: 90vw;
+      margin: 0;
+      padding: 10px;
+      box-sizing: border-box;
+      flex-wrap: wrap;
+    }
     padding: 0px;
   }
 }
