styled cart panel empty/filled

--- a/app/assets/stylesheets/panel.scss
+++ b/app/assets/stylesheets/panel.scss
@@ -17,7 +17,7 @@
 }
 
 .cart-modal-section {
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .ship-modal-section {
@@ -86,9 +86,47 @@
     display: flex;
     flex-direction: column;
     margin: auto 0;
-    padding-bottom: 10px;
   }
   .cart-panel-body {
+    ul {
+      li {
+        .cart-panel-details {
+          a{
+            img {
+              width: 50px;
+              height: 50px;
+            }
+          }
+
+          div h2 {
+            padding-left: 10px;
+            padding-right: 20px;
+            font-family: $playfair-serif;
+            font-size: 14px;
+          }
+          display: flex;
+          flex-direction: row;
+          justify-content: left;
+        }
+
+        .cart-panel-qty-price {
+          p {
+            display: flex;
+            justify-content: center;
+            font-family: $open-sans;
+            font-size: 12px;
+            padding-bottom: 5px;
+          }
+          display: flex;
+          flex-direction: column;
+        }
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10px 0;
+      }
+    }
+
     .view-cart-btn {
       h1 {
         display: flex;
@@ -109,6 +147,7 @@
       padding: 10px;
       text-decoration: none;
       box-sizing: border-box;
+      margin: 10px 0;
     }
 
     .view-cart-btn:hover {
