--- a/app/assets/stylesheets/product_show.scss
+++ b/app/assets/stylesheets/product_show.scss
@@ -32,6 +32,8 @@
     display: flex;
     flex-direction: row;
   }
+  padding-left: 10px;
+  box-sizing: border-box;
 }
 
 .show-product-summary {
@@ -122,6 +124,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 .show-product-wish {
@@ -563,6 +566,9 @@
     img {
       width: 100%;
     }
+    padding-right: 10px;
+    padding-left: 10px;
+    box-sizing: border-box;
   }
 
   .show-product-description {
@@ -635,7 +641,7 @@
       ul {
         display: none;
       }
-    width: 100%
+      width: 100%
     }
 
     .show-product-summary {
