--- a/app/assets/stylesheets/category_link.scss
+++ b/app/assets/stylesheets/category_link.scss
@@ -4,17 +4,19 @@
   a {
     label {
       color: $black;
-      font-size: 20px;
+      font-size: 24px;
     }
 
     button {
       width: 100%;
       height: 40px;
       color: white;
-      font-size: 14px;
+      font-size: 20px;
       background-color: $darkest-green;
       font-family: $playfair-serif;
       border-radius: 4px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
     label:hover {
