--- a/app/assets/stylesheets/category_nav.scss
+++ b/app/assets/stylesheets/category_nav.scss
@@ -10,7 +10,7 @@
       text-decoration: none;
       color: $black;
       font-family: $playfair-serif;
-      font-size: 12px;
+      font-size: 14px;
       background-color: white;
       padding: 10px 5px;
       margin-right: 10px;
@@ -21,11 +21,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 900px;
-  height: 32px;
+  width: 890px;
+  height: 42px;
   margin: auto;
   padding-bottom: 5px;
   padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  box-sizing: border-box;
 }
 
 @media all and (max-width: 900px) {
@@ -34,7 +37,6 @@
   }
   .category-nav-links {
     width: 100%;
-    
   }
 }
 
@@ -43,6 +45,7 @@
     li a{
       margin-right: 2px;
       padding: 0px;
+      font-size: 12px;
     }
   }
 }
