--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -12,7 +12,7 @@
         font-family: $roboto-serif;
       }
 
-      font-size: 24px;
+      font-size: 36px;
       color: $green;
       font-family: $pacifico-serif;
       padding: 10px 5px;
@@ -21,12 +21,15 @@
     text-decoration: none;
   }
 
-  width: 900px;
-  height: 40px;
-  padding: 10px 0px;
-  margin: auto;
+  width: 890px;
+  height: 60px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   justify-content: space-between;
+  padding: 10px;
+  margin-top: 10px;
+  box-sizing: border-box;
   align-items: center;
 }
 
@@ -35,14 +38,15 @@
     border: none;
     width: 100%;
     height: 28px;
-    padding: 0px;
+    padding-left: 5px;
+    font-size: 16px;
   }
 
   button{
     box-sizing: border-box;
     border: none;
-    height: 29px;
-    width: 28px;
+    height: 44px;
+    width: 44px;
     padding: 5px 5px;
     border-left: 0.5px solid $dark-beige;
   }
@@ -58,7 +62,7 @@
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
   width: 330px;
-  height: 30px;
+  height: 45px;
   box-sizing: content-box;
   padding: 0px 4px;
 }
@@ -156,10 +160,11 @@
     text-decoration: none;
     color: $dark-green;
     font-family: $playfair-serif;
-    font-size: 12px;
+    font-size: 18px;
     font-weight: bolder;
-    padding: 2px 10px;
+    padding: 2px 7px;
     border-left: 1.5px solid $black;
+    cursor: pointer;
   }
   display: flex;
   align-items: center;
@@ -172,8 +177,8 @@
   display: inline-block;
   background-repeat: no-repeat;
   overflow: hidden;
-  height: 20px;
-  width: 20px;
+  height: 22px;
+  width: 22px;
 }
 
 .icon-search {
@@ -194,8 +199,8 @@
 }
 
 .title-nav-empty-cart-icon {
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   display: inline-block;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -213,17 +218,26 @@
   width: 15px;
   position: absolute;
   font-family: $arial-helvetica-sans;
-  font-size: 10px;
+  font-size: 14px;
   font-weight: 900;
   color: $dark-green;
-  right: 11px;
-  top: 5px;
+  right: 14px;
+  top: 4px;
 }
 
 @media all and (max-width: 900px) {
+  .title-search{
+    width: calc(30vw)
+  }
+
+  .title-search-results{
+    width: calc(30vw + 10px)
+  }
+
   .title-nav {
     width: 100%;
   }
+
   .title-cart {
     padding-left: 0;
   }
@@ -231,12 +245,20 @@
 }
 
 @media all and (max-width: 650px) {
-  .title-search{
-    width: calc(100vw - 330px)
+  .title-nav {
+    .header-link {
+      h1 {
+        font-size: 22px;
+      }
+    }
+    box-sizing: border-box;
   }
-
-  .title-search-results{
-    width: calc(100vw - 320px)
+  .title-cart {
+    a {
+      font-size: 14px;
+      padding-left: 7px;
+      padding-right: 0px;
+    }
   }
 }
 
@@ -247,10 +269,9 @@
         .title-search {
           button {
             .icon-search {
-              background-size: 40%;
-              background-position: 9px 4px;
-              padding-left: 5px;
-              padding-right: 5px;
+              background-size: 60%;
+              background-position: 5px 6px;
+              padding: 5px;
             }
             display: flex;
             justify-content: center;
@@ -282,10 +303,9 @@
         .title-cart-inner {
           button {
             .icon-cart {
-              background-size: 50%;
-              background-position: 7px 4px;
-              padding-left: 5px;
-              padding-right: 5px;
+              background-size: 70%;
+              background-position: 4px 6px;
+              padding: 5px;
               height: 20px;
               width: 20px;
             }
@@ -320,14 +340,23 @@
     }
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
     flex-wrap: nowrap;
   }
 
+  .title-nav-empty-cart-icon {
+    background-size: 70%;
+    background-position: 5px 4px;
+    padding-left: 17px;
+    padding-right: 17px;
+  }
+
   .title-nav-cart-count {
-    font-size: 8px;
+    font-size: 12px;
     right: 5px;
-    top: 14px;
+    top: 12px;
   }
 }
 
