completed code for cart and cart styling

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -4,6 +4,7 @@ $beige: #E8E4DF;
 $dark-beige: #BCAA95;
 $light-gray: #DBDBDB;
 $green: #D9EBEB;
+$medium-green: #A2D5D4;
 $dark-green: #0C8346;
 $darkest-green: #0D635C;
 $sea-green: #1CC9B5;
