--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -16,7 +16,265 @@
 
 
 .cart-full {
+  .cart-body {
+    width: 1200px;
+    margin: 0 auto;
+  }
+  display: flex;
+  justify-content: center;
+}
 
+
+.cart-body {
+  margin: 10px 0;
+  width: 100vw;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+}
+
+.cart-body-left {
+  h1 {
+    font-family: $playfair-serif;
+    font-size: 26px;
+    padding: 10px 0;
+  }
+  ul {
+    li {
+      .cart-checkout-details {
+        .cart-checkout-details-inner {
+          a {
+            img {
+              width: 100%;
+            }
+            width: calc(100% / 4);
+            height: auto;
+          }
+          h2 {
+            font-family: $playfair-serif;
+            font-size: 16px;
+            padding: 0 10px;
+            margin-bottom: 10px;
+          }
+          p {
+            font-family: $playfair-serif;
+            font-size: 14px;
+            padding: 0 10px;
+          }
+          div {
+            width: 50%;
+          }
+          display: flex;
+          flex-direction: row;
+          justify-content: left;
+          width: 70%;
+        }
+        .cart-checkout-qty-remove {
+          .cart-checkout-qty {
+            select {
+              width: calc(100% * 1/3);
+              height: 36px;
+              padding-left: 5px;
+              padding-bottom: 5px;
+              padding-top: 5px;
+              background-color: white;
+              -webkit-appearance: none;
+              border-radius: 2px;
+
+
+              background-image:
+                linear-gradient(45deg, transparent 50%, grey 50%),
+                linear-gradient(135deg, grey 50%, transparent 50%),
+                linear-gradient(to right, white, white);
+              background-position:
+                calc(100% - 20px) calc(1em + 2px),
+                calc(100% - 15px) calc(1em + 2px),
+                100% 0;
+              background-size:
+                5px 5px,
+                5px 5px,
+                2.5em 2.5em;
+              background-repeat: no-repeat;
+            }
+            p {
+              font-family: $open-sans;
+              font-size: 14px;
+              padding: 0 10px;
+              height: 36px;
+            }
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 20px;
+          }
+          a {
+            font-family: $open-sans;
+            font-size: 14px;
+            cursor: pointer;
+          }
+          a:hover {
+            text-decoration: underline;
+            text-decoration-color: $sea-green;
+            transition: 0.2s;
+          }
+          display: flex;
+          flex-direction: column;
+          width: 50%;
+        }
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      border-bottom: 2px solid $beige;
+      padding: 10px 20px;
+    }
+    border-top: 4px solid $beige;
+    border-bottom: 3px solid $beige;
+  }
+  width: calc(100% * 2 / 3);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.cart-body-right {
+  h2 {
+    display: flex; 
+    justify-content: center;
+    font-family: $playfair-serif;
+    font-size: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  ul {
+    li {
+      span {
+        display: flex; 
+        justify-content: center;
+      }
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 10px 5px;
+      font-family: $open-sans;
+      font-size: 16px;
+      border-bottom: 2px solid $white;
+    }
+  }
+
+  .cart-total{
+    h1, p{
+      font-family: $arial-helvetica-sans;
+      font-weight: bold;
+      font-size: 20px;
+      padding: 5px;
+    }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 15x 0;
+  }
+
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 46px;
+    color: white;
+    font-size: 16px;
+    background-color: $darkest-green;
+    font-family: $playfair-serif;
+    border-radius: 4px;
+    padding: 10px;
+    text-decoration: none;
+    box-sizing: border-box;
+    margin-top: 20px;
+    margin-bottom: 30px;
+
+  }
+
+  button:hover {
+    cursor: pointer;
+    color: $black;
+    background-color: $sea-green;
+    transition-duration: 0.2s;
+    content: "res";
+  }
+
+  .cart-body-right-footer {
+    h2{
+      border-top: 2px solid $white;
+      display: flex; 
+      justify-content: center;
+      line-height: 1.5;
+      padding-top: 15px;
+      padding-bottom: 5px;
+      width: 100%;
+    }
+    ul {
+      span {
+        a {
+          text-decoration-color: $medium-green;
+          color: $black;
+          line-height: 1.5;
+          font-family: $open-sans;
+          font-size: 14px;
+
+        }
+        a:hover {
+          background-color: $medium-green;
+          transition-duration: 0.5s;
+        }
+        display: flex; 
+        justify-content: center;
+        padding: 5px;
+        border: none;
+
+        -webkit-hyphens: auto;
+        -moz-hyphens: auto;
+        -ms-hyphens: auto;
+        hyphens: auto;
+      }
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+
+  background-color: $beige;
+  width: calc(100% * 1 / 3);
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  margin-bottom: 40px;
+  box-sizing: border-box;
+}
+
+.cart-icon-chat {
+  background-image: image-url('icons/cart_icon_chat2.png');
+  background-size: 90%;
+  position: relative;
+  background-position: 0px 4px;
+}
+
+.cart-icon-email {
+  background-image: image-url('icons/cart_icon_email2.png');
+  background-size: 90%;
+  background-position: 0px 5px;
+}
+
+.cart-icon-phone {
+  background-image: image-url('icons/cart_icon_phone2.png');
+  background-size: 100%;
+  background-position: -1px 4px;
 }
 
 @media all and (max-width: 900px) {
@@ -28,6 +286,18 @@
 @media all and (max-width: 600px) {
   .cart-checkout-empty-splash {
     width: calc(100% * 2 / 3);
+  }
+
+  .cart-full {
+    .cart-body {
+      .cart-body-left,
+      .cart-body-right {
+        width: 100%;
+        box-sizing: border-box;
+      }
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
 
