--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,26 +3,26 @@
 .background-products {
   position: relative;
   padding-top: 25px;
-  width: 1500px;
+  width: 1200px;
   margin: auto;
   background-color: white;
+  box-sizing: border-box;
 }
 
 .products {
 }
 
-.header-background {
-  background-image: image-url('background.jpg');
-  height: 500px;
-  width: calc(100% - 30px);
-  background-repeat: no-repeat;
+.header-background-outer {
+  padding-left: 5px;
+  width: calc(100% - 5px);
+  box-sizing: border-box;
+  display: block;
   overflow: hidden;
-  background-size: 110%;
-  background-position: 10px center;
-  padding: 10px;
-  margin-bottom: 20px;
-  margin-left: 0;
-  margin-right: 0;
+}
+
+.header-background {
+  height: 400px;
+  box-sizing: border-box;
 }
 .links-nav {
   hr {
@@ -68,6 +68,7 @@
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
+  box-sizing: border-box;
 }
 
 .links-nav div a:not(:first-of-type),
@@ -88,8 +89,12 @@
         border: 1px solid $light-gray;
       }
 
-      span {
+      h2 {
         display: block;
+        font-family: $playfair-serif;
+        font-size: 16px;
+        padding-top: 5px;
+        padding-bottom: 5px;
       }
 
       span:hover {
@@ -102,42 +107,46 @@
   }
 
   span {
-    padding: 10px 0px;
+    margin-bottom: 15px;
+    font-family: $open-sans;
+    font-size: 14px;
   }
 
   box-sizing: border-box;
   list-style: none;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-bottom: 10px;
   width: calc(100% / 5);
 }
 
-@media all and (max-width: 1500px) {
+@media all and (max-width: 1200px) {
   .background-products {
     width: 100%;
   }
 
-  .header-background {
-    height: 400px;
-  }
-}
-
-@media all and (max-width: 1150px) {
   .products-index-item {
     width: calc(100% / 4);
   }
 }
 
-@media all and (max-width: 900px) {
+@media all and (max-width: 1000px) {
   .products-index-item {
     width: calc(100% / 2);
   }
 
   .header-background {
-    height: 240px;
+    height: 300px;
   }
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 800px) {
+  .background-products {
+    padding-top: 15px;
+  }
+
   .links-nav {
     div div, 
     div {
@@ -148,9 +157,10 @@
   }
 }
 
-@media all and (max-width: 450px) {
+@media all and (max-width: 640px) {
   .background-products {
     background-color: $beige;
+    padding-top: 10px;
   }
 
   .links-nav hr, .links-nav div:not(:first-of-type) {
@@ -178,7 +188,6 @@
         // border-bottom: 1px solid $beige; 
       }
 
-
       div {
         a {
           p{
@@ -198,8 +207,6 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        
-
       }
       display: flex;
       flex-direction: column;
@@ -211,7 +218,8 @@
     border: 1px solid $green; 
     width: calc(100% - 20px);
     margin-left: 10px;
-    
+    position: relative;
+    top: -14px;
     
   }
 
@@ -223,5 +231,7 @@
   .products-index-item {
     width: 100%;
     background: white;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
