--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 
     <script type="text/javascript">
       window.emptyCartURL = "<%= image_url('empty-cart.svg') %>"
+      window.backgroundImgURL = "<%= image_url('background.jpg') %>"
     </script>
     
     <%= yield %>
