--- a/app/assets/stylesheets/category_link.scss
+++ b/app/assets/stylesheets/category_link.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.wellness-link{
+.for-her-link{
   a {
     label {
       color: $black;
@@ -11,12 +11,14 @@
       width: 100%;
       height: 40px;
       color: white;
-      font-size: 20px;
+      font-size: 18px;
       background-color: $darkest-green;
       font-family: $playfair-serif;
       border-radius: 4px;
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-top: 5px;
+      padding-bottom: 5px;
     }
 
     label:hover {
@@ -42,11 +44,11 @@
   background: white;
   border-radius: 4px;
   position: relative;
-  top: -50px;
+  top: -60px;
 }
 
-@media all and (max-width: 450px) {
-  .wellness-link {
+@media all and (max-width: 640px) {
+  .for-her-link {
     a button {
       width: 80vw;
     }
