--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -336,7 +336,7 @@
         box-sizing: border-box;
       }
       display: flex;
-      justify-content: space-around;
+      justify-content: right;
       padding: 0;
     }
     display: flex;
